# recipes

./: .gitignore  LICENSE  recipes_learn
algorithm/: combination.cc  continuous.cc  iprange.cc  mergeMaps.cc  mergeN.cc  partition.cc  permutation.cc  permutation2.cc  removeContinuousSpaces.cc  select.cc
basic/: bench.cc  build.sh  combination.cc  counted_ptr.h  counted_ptr_test.cc  exact.cc  factorial.cc  fibonacci.cc  int128.h  numheaps.cc  partitions.cc  test.cc  uint.cc  uint.h
benchmark/: BUILD.bazel  WORKSPACE  bench_dd.py  bm_compress.cc  bm_containers.cc  bm_fileio.cc  bm_ipc.cc  bm_memory.cc  format.cc  format.h  format_bench.cc  format_test.cc
datetime/: .gitignore  Date.cc  Date.h  Date_test.cc  Date_unittest.cc  Makefile  TimeZone.cc  TimeZone.h  TimeZone_dump.cc  TimeZone_unittest.cc  Timestamp.cc  Timestamp.h  Timestamp_unittest.cc  build.sh  copyable.h  formula_cumdays.tex  formula_cycles.tex  formula_floors.tex  formula_linear_reg.tex  formula_phases.tex  formula_shift.tex  linear_regression.mp  regress.m  shift_month.pic  shift_month_cumsum.pic  time_benchmark.c
digest/: DigestEVP.h  DigestEVP2.h  DigestOOP.cc  DigestOOP.h  DigestOOP2.cc  DigestTMP.cc  bench.cc  build.sh  test_evp.cc  test_evp2.cc  test_oop.cc
esort/: README  build.sh  sort00.cc  sort01.cc  sort02.cc  sort03.cc  sort04.cc  sort10.cc  sort11.cc  sort12.cc
faketcp/: Makefile  README  acceptall.cc  connectmany.cc  discardall.cc  discardall2.cc  echoall.cc  echoall2.cc  faketcp.cc  faketcp.h  icmpecho.cc  net.pic  rejectall.cc  tun.pic
java/: run.sh
logging/: AsyncLoggingDoubleBuffering.h  AsyncLoggingQueue.h  AsyncLogging_test.cc  LogFile.cc  LogFile.h  LogFile_test.cc  LogStream.cc  LogStream.h  LogStream_bench.cc  LogStream_test.cc  Logging.cc  Logging.h  Logging_test.cc  README  build.sh
protobuf/: Makefile  codec.h  codec_test.cc  descriptor_test.cc  dispatcher.cc  dispatcher_lite.cc  query.proto
protorpc/: README  build.sh  echo.proto  rpc.proto  run_client.sh  run_server.sh
puzzle/: Einstein.java  buysell.cc  dance.cc  f100.pic  fib.py  fibonacci.cc  huarong.cc  latin_square.cc  nbody.c  nbody.cc  nqueens.cc  nqueens_dl.cc  nqueens_mt.cc  nqueens_opt.cc  nqueens_opt_mt.cc  query_freq.cc  seven.pic  typoglycemia.cc  unique.cc  waterpour.cc
python/: chargen.py  chat-poll.py  chat-reactor.py  echo-fork.py  echo-iterative.py  echo-poll.py  echo-reactor.py  echo-single.py  echo-thread.py  logviewer.py  netcat-nonblock.py  netcat.py  nqueens.py  self-connect.py  sockopt.py  tcprelay.py  tcprelay2.py  throughput-bidi.py  throughput.py  ttcp.py
reactor/: .gitignore  Makefile  README  mkdiff.sh  reactor.mk  reactor_lib.mk  s01-s00-EventLoop.cc.diff  s01-s00-EventLoop.h.diff  s02-s01-EventLoop.cc.diff  s02-s01-EventLoop.h.diff  s03-s02-EventLoop.cc.diff  s03-s02-EventLoop.h.diff  s03-s02-TimerQueue.cc.diff  s03-s02-TimerQueue.h.diff  s05-s04-Callbacks.h.diff  s05-s04-SocketsOps.cc.diff  s05-s04-SocketsOps.h.diff  s06-s05-Callbacks.h.diff  s06-s05-Channel.cc.diff  s06-s05-Channel.h.diff  s06-s05-EventLoop.cc.diff  s06-s05-EventLoop.h.diff  s06-s05-Poller.cc.diff  s06-s05-Poller.h.diff  s06-s05-SocketsOps.cc.diff  s06-s05-SocketsOps.h.diff  s06-s05-TcpConnection.cc.diff  s06-s05-TcpConnection.h.diff  s06-s05-TcpServer.cc.diff  s06-s05-TcpServer.h.diff  s07-s06-Callbacks.h.diff  s07-s06-Channel.cc.diff  s07-s06-Channel.h.diff  s07-s06-EventLoop.cc.diff  s07-s06-TcpConnection.cc.diff  s07-s06-TcpConnection.h.diff  s07-s06-test3.cc.diff  s07-s06-test8.cc.diff  s08-s07-Channel.h.diff  s08-s07-Socket.cc.diff  (+32 more)
ssl/: .gitignore  TlsAcceptor.cc  TlsAcceptor.h  TlsConfig.cc  TlsConfig.h  TlsContext.h  TlsStream.cc  TlsStream.h  (+12 more)
topk/: .gitignore  BUILD.bazel  Makefile  WORKSPACE  benchmark.cc  file.h  gen.cc  gen.py  gen_count.py  input.h  merge.h  merger.cc  sender.cc  sha1all.cc  split.cc  timer.h  word_freq.cc  word_freq_shards.cc  word_freq_shards_basic.cc  word_freq_sort.cc  word_freq_sort_basic.cc
(+357 files in other folders)
