
cc_binary(
    name = "bm_containers",
    srcs = ["bm_containers.cc"],
    copts = ["-std=c++17"],
    deps = [
        "@benchmark",
        "@absl//absl/container:flat_hash_map",
        "@absl//absl/container:node_hash_map",
    ],
)

cc_binary(
    name = "bm_fileio",
    srcs = ["bm_fileio.cc"],
    deps = [
        "@benchmark",
    ],
)

cc_binary(
    name = "bm_memory",
    srcs = ["bm_memory.cc"],
    deps = [
        "@benchmark//:benchmark_main",
    ],
)
