cc_binary(
    name = "word_freq_shards_basic",
    srcs = ["word_freq_shards_basic.cc"],
    # linkopts = ["-ltcmalloc_and_profiler"],
    deps = [
        ":common",
        "@absl//absl/container:flat_hash_map",
    ],
)

cc_library(
    name = "common",
    hdrs = [
        "file.h",
        "timer.h",
    ],
    deps = [
        "@absl//absl/strings:str_format",
        "@muduo//muduo/base",
    ],
)

cc_test(
    name = "benchmark",
    srcs = ["benchmark.cc"],
    deps = [
        ":common",
        "@absl//absl/container:flat_hash_set",
    ],
)
